website/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alex-website
  namespace: alex-website
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: traefik
      sectionName: web
  hostnames:
    - dev.alexnorum.com
    - www.alexnorum.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: alex-website
          port: 80
