website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alex-website-ingress
  namespace: alex-website
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dev.alexnorum.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alex-website
            port:
              number: 80

  - host: alexnorum.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alex-website
            port:
              number: 80
